--- a/index.html
+++ b/index.html
@@ -36,8 +36,22 @@
 				</nav>
 
 				<ul class="list">
-					<li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-					<li class="item"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+					<li class="item">
+						<a href="mailto:info@devstudio.com" class="contacts">
+							<svg class="icon-head" width="16px" height="12px">
+								<use href="./images/symbol-defs.svg#icon-envelope" width="16px" heigth="12px"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li class="item">
+						<a href="tel:+380961111111" class="contacts">
+							<svg class="icon-head" width="10px" height="16px">
+								<use href="./images/symbol-defs.svg#icon-smartphone" width="10px" heigth="16px"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -55,18 +69,38 @@
 				<h2 class="section-title">Наші переваги</h2>
 				<ul class="preference">
 					<li class="item details">
+						<div class="iconbox" height="120px">
+							<svg class="icon" width="66.32" height="70px">
+								<use href="./images/symbol-defs.svg#icon-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
 						<p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
 					<li class="item punctuality">
+						<div class="iconbox" height="120px">
+							<svg class="icon" width="66.32" height="70px">
+								<use href="./images/symbol-defs.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
 						<p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
 					<li class="item planing">
+						<div class="iconbox" height="120px">
+							<svg class="icon" width="66.32" height="70px">
+								<use href="./images/symbol-defs.svg#icon-diagram"></use>
+							</svg>
+						</div>
 						<h3 class="section-title planing">ПЛАНУВАННЯ</h3>
 						<p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li class="item modern-tech">
+						<div class="iconbox" height="120px">
+							<svg class="icon" width="66.32" height="70px">
+								<use href="./images/symbol-defs.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="section-title modern-tech">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 						<p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
@@ -88,6 +122,44 @@
 							<img src="./images/team-img1.jpg" alt="фото Ігор Дем'яненко" width="270" />
 							<h3 class="section-title person">Ігор Дем'яненко</h3>
 							<p lang="en" class="position">Product Designer</p>
+							<ul class="networks-list">
+								<li>
+									<a href="" class="networks">
+										<div class="networks-block">
+											<svg class="networks-icon" width="20px" height="20px">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="" class="networks">
+										<div class="networks-block">
+											<svg class="networks-icon" width="20px" height="20px">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="" class="networks">
+										<div class="networks-block">
+											<svg class="networks-icon" width="20px" height="20px">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="" class="networks">
+										<div class="networks-block">
+											<svg class="networks-icon" width="20px" height="20px">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</div>
+									</a>
+								</li>
+							</ul>
 						</li>
 						<li class="item">
 							<img src="./images/team-img2.jpg" alt="фото Ольга Рєпіна" width="270" />
