добавил свг іконки клиентам

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</section>
 
 			<section class="section">
-				<h2 class="section-title">Наші переваги</h2>
+				<h2 class="section-title visually-hiden">Наші переваги</h2>
 				<ul class="preference">
 					<li class="item details">
 						<div class="iconbox" height="120px">
@@ -123,40 +123,32 @@
 							<h3 class="section-title person">Ігор Дем'яненко</h3>
 							<p lang="en" class="position">Product Designer</p>
 							<ul class="networks-list">
-								<li>
+								<li class="item">
 									<a href="" class="networks">
-										<div class="networks-block">
-											<svg class="networks-icon" width="20px" height="20px">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
-											</svg>
-										</div>
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="item">
 									<a href="" class="networks">
-										<div class="networks-block">
-											<svg class="networks-icon" width="20px" height="20px">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
-											</svg>
-										</div>
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="item">
 									<a href="" class="networks">
-										<div class="networks-block">
-											<svg class="networks-icon" width="20px" height="20px">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
-											</svg>
-										</div>
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="item">
 									<a href="" class="networks">
-										<div class="networks-block">
-											<svg class="networks-icon" width="20px" height="20px">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
-											</svg>
-										</div>
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
 									</a>
 								</li>
 							</ul>
@@ -165,19 +157,144 @@
 							<img src="./images/team-img2.jpg" alt="фото Ольга Рєпіна" width="270" />
 							<h3 class="section-title person">Ольга Рєпіна</h3>
 							<p lang="en" class="position">Frontend Developer</p>
+							<ul class="networks-list">
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 						<li class="item">
 							<img src="./images/team-img3.jpg" alt="фото Микола Тарасов" width="270" />
 							<h3 class="section-title person">Микола Тарасов</h3>
 							<p lang="en" class="position">Marketing</p>
+							<ul class="networks-list">
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 						<li class="item">
 							<img src="./images/team-img4.jpg" alt="фото Михайло Єрмаков" width="270" />
 							<h3 class="section-title person">Михайло Єрмаков</h3>
 							<p lang="en" class="position">UI Designer</p>
+							<ul class="networks-list">
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
+			</section>
+			<section class="section">
+				<h2 class="section-title clients">Постійні клієнти</h2>
+				<ul class="clients-list">
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company1"></use></svg>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company2"></use></svg>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company3"></use></svg>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company4"></use></svg>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company5"></use></svg>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="client-link">
+							<svg width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-company6"></use></svg>
+						</a>
+					</li>
+				</ul>
 			</section>
 		</main>
 		<footer class="page-footer">
