--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 			<section class="section filter">
-				<h1>Фільтри по наших проєтах</h1>
+				<h1 class="visually-hiden">Фільтри по наших проєтах</h1>
 				<ul class="filters">
 					<li class="item"><button type="button" class="button">Усі</button></li>
 					<li class="item"><button type="button" class="button">Веб-сайти</button></li>
@@ -46,7 +46,7 @@
 					<li class="item"><button type="button" class="button">Дизайн</button></li>
 					<li class="item"><button type="button" class="button">Маркетинг</button></li>
 				</ul>
-				<h2>Список наших проєктів</h2>
+				<h2 class="visually-hiden">Список наших проєктів</h2>
 				<div class="container">
 					<ul class="projects">
 						<li class="item">
