доробив дз номер 4

--- a/index.html
+++ b/index.html
@@ -298,18 +298,55 @@
 			</section>
 		</main>
 		<footer class="page-footer">
-			<div class="container foot">
-				<a href="./index.html" class="logo">
-					<span class="part-logo">Web</span>
-					Studio
-				</a>
-				<address class="address">
-					<p class="street">м. Київ, пр-т Лесі Українки, 26</p>
-					<ul>
-						<li class="mail"><a href="mailto:info@devstudio.com" class="contacts mail">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+			<div class="footer-block">
+				<div class="container foot">
+					<a href="./index.html" class="logo">
+						<span class="part-logo">Web</span>
+						Studio
+					</a>
+					<address class="address">
+						<p class="street">м. Київ, пр-т Лесі Українки, 26</p>
+						<ul>
+							<li class="mail"><a href="mailto:info@devstudio.com" class="contacts mail">info@devstudio.com</a></li>
+							<li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+						</ul>
+					</address>
+				</div>
+				<div class="foot-networkslist">
+					<h4 class="join-us">Приєднуйтесь</h4>
+					<ul class="networks-list">
+								<li class="item">
+									<a href="" class="networks webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
