--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="CSS/styles.css" />
 	</head>
 	<body>
-		<header class="page-header bottomline">
+		<header class="page-header">
 			<div class="container head">
 				<nav>
 					<ul class="site-nav">
@@ -31,8 +31,22 @@
 				</nav>
 
 				<ul class="list">
-					<li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-					<li class="item"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+					<li class="item">
+						<a href="mailto:info@devstudio.com" class="contacts">
+							<svg class="icon-head" width="16px" height="12px">
+								<use href="./images/symbol-defs.svg#icon-envelope" width="16px" heigth="12px"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li class="item">
+						<a href="tel:+380961111111" class="contacts">
+							<svg class="icon-head" width="10px" height="16px">
+								<use href="./images/symbol-defs.svg#icon-smartphone" width="10px" heigth="16px"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -50,44 +64,55 @@
 				<div class="container">
 					<ul class="projects">
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg1.jpg" alt="Превью проекта Технокряк" width="370" />
 							<div class="descr">
 								<h3 class="section-title project">Технокряк</h3>
 								<p>Веб-сайт</p>
+							</a>	
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
 							<h3 class="section-title project">
 								Постер
 								<span lang="en">New Orlean vs Golden Star</span>
 							</h3>
 							<p>Дизайн</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg3.jpg" alt="Превью додатка ресторана Seafood" width="370" />
 							<h3 class="section-title project">
 								Ресторан
 								<span lang="en">Seafood</span>
 							</h3>
 							<p>Додаток</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg4.jpg" alt="Превью проекта Prime" width="370" />
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">Prime</span>
 							</h3>
 							<p>Маркетинг</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg5.jpg" alt="Превью проєкта Boxes" width="370" />
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">Boxes</span>
 							</h3>
 							<p>Додаток</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img
 								src="./images/portfolioimg/portfolioimg6.jpg"
 								alt="Превью веб сайта Inspiration has no Borders"
@@ -95,45 +120,89 @@
 							/>
 							<h3 lang="en" class="section-title project">Inspiration has no Borders</h3>
 							<p>Веб-сайт</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg7.jpg" alt="Превью видання Limited Edition" width="370" />
 							<h3 class="section-title project">
 								Видання
 								<span lang="en">Limited Edition</span>
 							</h3>
 							<p>Дизайн</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg8.jpg" alt="Превью проєкта LAB" width="370" />
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">LAB</span>
 							</h3>
 							<p>Маркетинг</p>
+							</a>
 						</li>
 						<li class="item">
+							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg9.jpg" alt="Превью додатка Growing Business" width="370" />
 							<h3 lang="en" class="section-title project">Growing Business</h3>
 							<p>Додаток</p>
+							</a>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</main>
 		<footer class="page-footer">
-			<div class="container foot">
-				<a href="./index.html" class="logo">
-					<span class="part-logo">Web</span>
-					Studio
-				</a>
-				<address class="address">
-					<p class="street">м. Київ, пр-т Лесі Українки, 26</p>
-					<ul>
-						<li class="mail"><a href="mailto:info@devstudio.com" class="contacts mail">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+			<div class="footer-block">
+				<div class="container foot">
+					<a href="./index.html" class="logo">
+						<span class="part-logo">Web</span>
+						Studio
+					</a>
+					<address class="address">
+						<p class="street">м. Київ, пр-т Лесі Українки, 26</p>
+						<ul>
+							<li class="mail"><a href="mailto:info@devstudio.com" class="contacts mail">info@devstudio.com</a></li>
+							<li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+						</ul>
+					</address>
+				</div>
+				<div class="foot-networkslist">
+					<h4 class="join-us">Приєднуйтесь</h4>
+					<ul class="networks-list">
+								<li class="item">
+									<a href="" class="networks webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="item">
+									<a href="" class="networks  webstudio">
+										<svg class="networks-icon" width="20px" height="20px">
+											<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
