випровив помилки на сторынцы index..html, проблема на сторінці портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+		/>
 		<title>Web Studio Site</title>
 		<link rel="stylesheet" href="CSS/styles.css" />
 	</head>
@@ -66,8 +70,7 @@
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg1.jpg" alt="Превью проекта Технокряк" width="370" />
-							<div class="descr">
-								<h3 class="section-title project">Технокряк</h3>
+							<h3 class="section-title project">Технокряк</h3>
 								<p>Веб-сайт</p>
 							</a>	
 						</li>
