--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<button type="button" class="button">Замовити послугу</button>
 			</section>
 
-			<section class="section">
+			<section class="section features">
 				<h2 class="section-title visually-hiden">Наші переваги</h2>
 				<ul class="preference">
 					<li class="item details">
@@ -261,7 +261,7 @@
 					</ul>
 				</div>
 			</section>
-			<section class="section">
+			<section class="section our-clients">
 				<h2 class="section-title clients">Постійні клієнти</h2>
 				<ul class="clients-list">
 					<li class="item">
