доробив дз номер 4

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 					<ul class="team">
 						<li class="item">
 							<img src="./images/team-img1.jpg" alt="фото Ігор Дем'яненко" width="270" />
+							<div class="team-descr">
 							<h3 class="section-title person">Ігор Дем'яненко</h3>
 							<p lang="en" class="position">Product Designer</p>
 							<ul class="networks-list">
@@ -152,9 +153,11 @@
 									</a>
 								</li>
 							</ul>
+							</div>
 						</li>
 						<li class="item">
 							<img src="./images/team-img2.jpg" alt="фото Ольга Рєпіна" width="270" />
+							<div class="team-descr">
 							<h3 class="section-title person">Ольга Рєпіна</h3>
 							<p lang="en" class="position">Frontend Developer</p>
 							<ul class="networks-list">
@@ -187,9 +190,11 @@
 									</a>
 								</li>
 							</ul>
+							</div>
 						</li>
 						<li class="item">
 							<img src="./images/team-img3.jpg" alt="фото Микола Тарасов" width="270" />
+							<div class="team-descr">
 							<h3 class="section-title person">Микола Тарасов</h3>
 							<p lang="en" class="position">Marketing</p>
 							<ul class="networks-list">
@@ -222,9 +227,11 @@
 									</a>
 								</li>
 							</ul>
+							</div>
 						</li>
 						<li class="item">
 							<img src="./images/team-img4.jpg" alt="фото Михайло Єрмаков" width="270" />
+							<div class="team-descr">
 							<h3 class="section-title person">Михайло Єрмаков</h3>
 							<p lang="en" class="position">UI Designer</p>
 							<ul class="networks-list">
@@ -257,6 +264,7 @@
 									</a>
 								</li>
 							</ul>
+							</div>
 						</li>
 					</ul>
 				</div>
