--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="CSS/styles.css" />
 	</head>
 	<body>
-		<header class="page-header">
+		<header class="page-header portfolio">
 			<div class="container head">
 				<nav>
 					<ul class="site-nav">
@@ -65,53 +65,63 @@
 					<li class="item"><button type="button" class="button">Маркетинг</button></li>
 				</ul>
 				<h2 class="visually-hiden">Список наших проєктів</h2>
-				<div class="container">
+				<div class="container project-list">
 					<ul class="projects">
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg1.jpg" alt="Превью проекта Технокряк" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">Технокряк</h3>
 								<p>Веб-сайт</p>
-							</a>	
+							</div>	
+							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Постер
 								<span lang="en">New Orlean vs Golden Star</span>
 							</h3>
 							<p>Дизайн</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg3.jpg" alt="Превью додатка ресторана Seafood" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Ресторан
 								<span lang="en">Seafood</span>
 							</h3>
 							<p>Додаток</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg4.jpg" alt="Превью проекта Prime" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">Prime</span>
 							</h3>
 							<p>Маркетинг</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg5.jpg" alt="Превью проєкта Boxes" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">Boxes</span>
 							</h3>
 							<p>Додаток</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
@@ -121,35 +131,43 @@
 								alt="Превью веб сайта Inspiration has no Borders"
 								width="370"
 							/>
+							<div class="container-descr">
 							<h3 lang="en" class="section-title project">Inspiration has no Borders</h3>
 							<p>Веб-сайт</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg7.jpg" alt="Превью видання Limited Edition" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Видання
 								<span lang="en">Limited Edition</span>
 							</h3>
 							<p>Дизайн</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg8.jpg" alt="Превью проєкта LAB" width="370" />
+							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
 								<span lang="en">LAB</span>
 							</h3>
 							<p>Маркетинг</p>
+							</div>
 							</a>
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg9.jpg" alt="Превью додатка Growing Business" width="370" />
+							<div class="container-descr">
 							<h3 lang="en" class="section-title project">Growing Business</h3>
 							<p>Додаток</p>
+							</div>
 							</a>
 						</li>
 					</ul>
