зробив першу частина дз номер 5

--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@
 			<section class="section workfield">
 				<h2 class="section-title work">Чим ми займаємося</h2>
 				<ul class="our-workfield">
-					<li class="item"><img src="./images/img1.jpg" alt="а" width="370" /></li>
-					<li class="item"><img src="./images/img2.jpg" alt="а" width="370" /></li>
-					<li class="item"><img src="./images/img3.jpg" alt="а" width="370" /></li>
+					<li class="item"><img src="./images/img1.jpg" alt="а" width="370" />
+					<div class="item-descr"><h3>Десктопні додатки</h3></div>
+					</li>
+					<li class="item"><img src="./images/img2.jpg" alt="а" width="370" />
+					<div class="item-descr"><h3>Мобільні додатки</h3></div>
+				</li>
+					<li class="item"><img src="./images/img3.jpg" alt="а" width="370" />
+					<div class="item-descr"><h3>Дизайнерські рішення</h3></div>
+				</li>
 				</ul>
 			</section>
 			<section class="section team">
