--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,8 @@
 						<li class="item">
 							<a href="" class="project-link">
 							<img src="./images/portfolioimg/portfolioimg1.jpg" alt="Превью проекта Технокряк" width="370" />
-							<div class="container-descr">
+							<p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+								<div class="container-descr">
 							<h3 class="section-title project">Технокряк</h3>
 								<p>Веб-сайт</p>
 							</div>	
