--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 					<br />
 					вашого бізнесу
 				</h1>
-				<button type="button" class="button">Замовити послугу</button>
+				<button type="button" class="button" data-modal-open>Замовити послугу</button>
+				<div class="backdrop is-hidden" data-modal><div class="modal"><button type="button" class="close-modal" data-modal-close><svg class="close-icon" width="30px" height="30px"><use href="./images/symbol-defs.svg#icon-close"></use></svg></button></div></div>
 			</section>
 
 			<section class="section features">
@@ -363,5 +364,6 @@
 				</div>
 			</div>
 		</footer>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
