анимировал виезжающие окно

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,11 @@
 					<ul class="projects">
 						<li class="item">
 							<a href="" class="project-link">
+							<div class="overlay-box">	
 							<img src="./images/portfolioimg/portfolioimg1.jpg" alt="Превью проекта Технокряк" width="370" />
-							<p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-								<div class="container-descr">
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
+							<div class="container-descr">
 							<h3 class="section-title project">Технокряк</h3>
 								<p>Веб-сайт</p>
 							</div>	
