--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+							<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Постер
@@ -93,7 +96,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg3.jpg" alt="Превью додатка ресторана Seafood" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Ресторан
@@ -105,7 +111,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg4.jpg" alt="Превью проекта Prime" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
@@ -117,7 +126,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg5.jpg" alt="Превью проєкта Boxes" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
@@ -129,11 +141,14 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img
 								src="./images/portfolioimg/portfolioimg6.jpg"
 								alt="Превью веб сайта Inspiration has no Borders"
 								width="370"
 							/>
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 lang="en" class="section-title project">Inspiration has no Borders</h3>
 							<p>Веб-сайт</p>
@@ -142,7 +157,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg7.jpg" alt="Превью видання Limited Edition" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Видання
@@ -154,7 +172,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg8.jpg" alt="Превью проєкта LAB" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 class="section-title project">
 								Проєкт
@@ -166,7 +187,10 @@
 						</li>
 						<li class="item">
 							<a href="" class="project-link">
+								<div class="overlay-box">
 							<img src="./images/portfolioimg/portfolioimg9.jpg" alt="Превью додатка Growing Business" width="370" />
+							<div class="overlay"><p class="cover-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
+							</div>
 							<div class="container-descr">
 							<h3 lang="en" class="section-title project">Growing Business</h3>
 							<p>Додаток</p>
